Icon size fix on small screens, about replace

--- a/src/css/style.less
+++ b/src/css/style.less
@@ -127,6 +127,7 @@ h1 {
 	margin: -20px 0 20px;
 	background: #fff;
 	border-bottom: 1px solid #e8e8e8;
+	text-align: center;
 
 	.navbar {
 		margin: 0;
@@ -139,6 +140,7 @@ h1 {
 		background-repeat: no-repeat;
 		position: relative;
 		display:none;
+		min-width: 150px;
 		
 		&:last-child::after {
 			display: none;
@@ -202,7 +204,7 @@ h1 {
 	}
 }
 .btn-start {
-	padding: 20px;
+	padding: 1em;
 	text-align: center;
 	background: #333;
 	font-size: 1.5em;
@@ -231,7 +233,7 @@ h1 {
 		content: "\00a0";
 		display: block;
 		position: absolute;
-		top: 50%;
+		top: 1.5em;
 		right: -50px;
 		width: 50px;
 		height: 1px;
